<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="250dp"
                android:layout_height="350dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/noimg"/>

            <TextView
                android:id="@+id/textview_title"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_poster"
                android:textColor="@color/colorHellGrau"
                android:textSize="22sp"
                android:text="@string/textview_title"/>

            <TextView
                android:id="@+id/textview_genre"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHellGrau"
                android:layout_below="@+id/textview_title"

                android:text="@string/textview_genre"/>

            <TextView
                android:id="@+id/textview_runtime"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHellGrau"
                android:layout_below="@+id/textview_genre"

                android:text="@string/textview_runtime"/>

            <TextView
                android:id="@+id/textview_plot"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHellGrau"
                android:layout_below="@+id/textview_runtime"
                android:text="@string/textview_plot"/>

            <Button
                android:id="@+id/button_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textview_plot"
                android:textColor="@color/colorHellGrau"
                android:text="@string/button_edit"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>